--- a/Participations/WPF-Vowels_and_Consonants/MainWindow.xaml
+++ b/Participations/WPF-Vowels_and_Consonants/MainWindow.xaml
@@ -9,9 +9,9 @@
     <Grid>
         <ListBox x:Name="lstConsonants" Margin="418,141,0,0"/>
         <ListBox x:Name="lstVowels" Margin="0,141,418,0"/>
-        <TextBox x:Name="txtWord" HorizontalAlignment="Left" Margin="211,21,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtWord" HorizontalAlignment="Left" Margin="211,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
         <Label Content="Enter a word" Margin="32,14,609,0" Height="31" VerticalAlignment="Top"/>
-        <Button x:Name="btnConvert" Content="Separate!" HorizontalAlignment="Left" Margin="177,62,0,0" VerticalAlignment="Top" Height="32" Width="107" Click="btnConvert_Click"/>
+        <Button x:Name="btnConvert" Content="Separate!" HorizontalAlignment="Left" Margin="177,62,0,0" VerticalAlignment="Top" Height="32" Width="107" Click="btnConvert_Click" IsDefault="True"/>
 
     </Grid>
 </Window>
