--- a/Participations/WPF_ContactList/MainWindow.xaml
+++ b/Participations/WPF_ContactList/MainWindow.xaml
@@ -16,14 +16,14 @@
         <GroupBox Header="Contact Details" Margin="10,104,356,10" Foreground="White" FontSize="14" FontWeight="Bold" FontFamily="Adobe Gothic Std B">
             <Image x:Name="imgPhoto" HorizontalAlignment="Left" Height="290" Margin="181,0,0,0" VerticalAlignment="Top" Width="239"/>
         </GroupBox>
-        <TextBox x:Name="txtFirst" HorizontalAlignment="Left" Margin="30,166,0,245" Text="" TextWrapping="Wrap" Width="158"/>
+        <TextBox x:Name="txtFirst" HorizontalAlignment="Left" Margin="30,166,0,0" Text="" TextWrapping="Wrap" Width="158" Height="23" VerticalAlignment="Top" IsEnabled="False"/>
         <Label Content="First" HorizontalAlignment="Left" Margin="93,135,0,0" VerticalAlignment="Top" FontFamily="Adobe Gothic Std B" Foreground="#FFF9F0F0"/>
-        <TextBox x:Name="txtLast" HorizontalAlignment="Left" Margin="30,235,0,176" Text="" TextWrapping="Wrap" Width="158"/>
+        <TextBox x:Name="txtLast" Margin="30,235,0,0" Text="" TextWrapping="Wrap" Height="23" VerticalAlignment="Top" HorizontalAlignment="Left" Width="158" IsEnabled="False"/>
         <Label Content="Last" HorizontalAlignment="Left" Margin="93,0,0,0" VerticalAlignment="Center" FontFamily="Adobe Gothic Std B" Foreground="#FFF9F0F0"/>
-        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Margin="31,308,0,103" Text="" TextWrapping="Wrap" Width="158"/>
+        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Margin="31,308,0,0" Text="" TextWrapping="Wrap" Width="158" Height="23" VerticalAlignment="Top" IsEnabled="False"/>
         <Label Content="Email" HorizontalAlignment="Left" Margin="94,277,0,0" VerticalAlignment="Top" FontFamily="Adobe Gothic Std B" Foreground="#FFF9F0F0"/>
         <ListBox x:Name="lstContacts" Margin="449,10,10,10" Background="#99FFFFFF" FontFamily="Adobe Gothic Std B" Foreground="#FFF9F2F2"/>
-        <Button x:Name="btnShowDetails" Content="Details" HorizontalAlignment="Left" Margin="227,46,0,0" VerticalAlignment="Top" Height="53" Width="101" FontFamily="Adobe Gothic Std B">
+        <Button x:Name="btnShowDetails" Content="Details" HorizontalAlignment="Left" Margin="227,46,0,0" VerticalAlignment="Top" Height="53" Width="101" FontFamily="Adobe Gothic Std B" Click="btnShowDetails_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFCAD313"/>
